// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`It has the reducer tests Should handle failure repo action 1`] = `
Object {
  "error": "Error",
  "isLoading": false,
  "loaded": false,
  "repos": null,
  "selected": null,
}
`;

exports[`It has the reducer tests Should handle load repo action  1`] = `
Object {
  "error": null,
  "isLoading": true,
  "loaded": false,
  "repos": null,
  "selected": null,
}
`;

exports[`It has the reducer tests Should handle success repo action 1`] = `
Object {
  "error": null,
  "isLoading": false,
  "loaded": true,
  "repos": Array [],
  "selected": null,
}
`;

exports[`It has the reducer tests Should test the initial state if the reducer 1`] = `
Object {
  "error": null,
  "isLoading": false,
  "loaded": false,
  "repos": null,
  "selected": null,
}
`;
